fix: fixed bugs with ratings and genres